syntax = "proto3";

package sbrt.preppy;

import "profile_descriptor.proto";

service ProfileService {

  /*  -------------------------------- CONNECT/DISCONNECT -------------------------------- */
  rpc connectUser (UserInfo) returns (ConnectMessage) {}
  rpc disconnectUser(UserInfo) returns(DisconnectMessage){}
  /*  -------------------------------- SENDING MESSAGES -------------------------------- */
  rpc sendBroadcastMsg(MessageText) returns (Empty){}
  rpc sendPrivateMsg(PrivateMessageText) returns (Empty){}
  /*  -------------------------------- GETTING MESSAGES -------------------------------- */
  rpc syncMessages(UserInfo) returns (stream MessageText){}
  rpc syncUserList(Empty) returns (stream UserInfo){}
}
